# iotkit-embedded

./: .gitignore  CMakeLists.txt  DEV
sample/mqtt/: CMakeLists.txt
src/: CMakeLists.txt
src/platform/ssl/: CMakeLists.txt
src/platform/ssl/mbedtls/: HAL_TLS_mbedtls.c
src/platform/ssl/openssl/: CMakeLists.txt  HAL_TLS_openssl.c
